--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.metals
+.vscode
+.scala-build
+scalaLearning/.bloop
+scalaLearning/.idea
+.bloop
+project
+scalaLearning/out
+scalaLearning/target/
+target/
